--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ html {
     position: relative;
     padding-top: 50%;
     margin-top: 46px;
-    background: url('./assets/img/chicago.jpg') top center / cover no-repeat;
+    background: url('../assets/img/chicago.jpg') top center / cover no-repeat;
 }
 
 #slider .img-description {
@@ -358,7 +358,7 @@ html {
 
 .map {
     padding-top: 50%;
-    background: url('./assets/img/map.jpg') top center / cover no-repeat;
+    background: url('../assets/img/map.jpg') top center / cover no-repeat;
 }
 
 #footer {
