--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ html {
     position: relative;
     padding-top: 50%;
     margin-top: 46px;
-    background: url('../assets/img/chicago.jpg') top center / cover no-repeat;
+    background: url('../img/chicago.jpg') top center / cover no-repeat;
 }
 
 #slider .img-description {
@@ -196,7 +196,6 @@ html {
     text-align: center;
     text-shadow: 0 0 5px #000;
 }
-
 
 #content {
     min-height: 1000px;
@@ -358,7 +357,7 @@ html {
 
 .map {
     padding-top: 50%;
-    background: url('../assets/img/map.jpg') top center / cover no-repeat;
+    background: url('../img/map.jpg') top center / cover no-repeat;
 }
 
 #footer {
